User can delete country

--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -5,3 +5,4 @@
 </ul>
 
 <%= link_to 'Edit country', edit_country_path(@country) %>
+<%= link_to 'Delete country', country_path(@country), method: :delete %>
